# CapIX-Code

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  INSTALL.md  LICENSE  NOTICE  README.md  SECURITY.md  capix-code-2.2.5.tgz  eslint.config.mjs  package-lock.json  package.json  tsconfig.json  tui-capix.json  vitest.config.ts
assets/: tui-logo.ts
brand/: banner.ts
commands/: agents.md  analytics.md  attest.md  checkpoint.md  cleanup.md  compact.md  confidential-models.md  context.md  covenant.md  decisions.md  delegate.md  deploy.md  doctor.md  domains.md  endpoints.md  forget.md  forward.md  graph.md  handoff.md  logs.md  memory.md  metrics.md  network.md  open.md  plan.md  preview.md  promote.md  proofs.md  receipts.md  remember.md  review.md  rollback.md  secure.md  skills.md  ssh.md  stop.md  train.md  update.md  verify-checks.md  verify-proof.md  (+3 more)
config/: capix-defaults.json  defaults.json  runtime-package.json
coverage/: lcov.info
docs/: BUILD_SYSTEM.md  CapixCode.md  DEPENDENCY_SECURITY_STATUS.md  RELEASE_PROCESS.md  RUNTIME_INTEGRATION_STATUS.md  architecture.md
launcher/: Cargo.toml
launcher/src/: format.rs  main.rs  merkle_verify.rs  new_command.rs
manifest/: release-manifest.json
release/: capix-code-2.2.5-darwin-arm64-unsigned.tar.gz.sha256  release-manifest.json  version.json
scripts/: assert-artifact.sh  assert-customer-brand.sh  assert-upstream-brand.sh  bootstrap.sh  build-all.sh  build-manifest.mjs  build.sh  check-release-consistency.mjs  checksum.sh  dev-install.sh  dev.sh  engine-patches.sh  fix-capix-install.sh  install-config.sh  install.sh  package-customer.sh  package.sh  postinstall.cjs  postinstall.js  prepare-native-addons.mjs  prepare-npm-meta.mjs  prepare-npm-platform.mjs  rebrand.sh  resolve-version.mjs  smoke-mcp.mjs  (+6 more)
(+109 files in other folders)
