[package]
name = "capix-code"
version = "1.1.0"
edition = "2021"
description = "Capix Code: signed native launcher/broker/updater for the Capix Agent Runtime"
license = "Apache-2.0"

[[bin]]
name = "capix-code"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
keyring = { version = "3", features = ["apple-native", "windows-native", "linux-native-sync-persistent", "crypto-rust"] }
dirs = "5"
sha2 = "0.10"
ed25519-dalek = "2"
base64 = "0.22"
rand = "0.8"
url = "2"
