[package]
name = "capix-code"
version = "2.4.12"
edition = "2021"
description = "Capix Code: signed native launcher/broker/updater for the Capix Agent Runtime"
license = "Apache-2.0"

[[bin]]
name = "capix-code"
path = "src/main.rs"

[dependencies]
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
keyring = { version = "3", features = ["apple-native", "windows-native", "linux-native-sync-persistent", "crypto-rust"] }
dirs = "5"
sha2 = "0.10"
ed25519-dalek = "3"
base64 = "0.22"
rand = "0.8"
url = "2"
bs58 = "0.5"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61.2", features = [
  "Win32_Foundation",
  "Win32_Security",
  "Win32_Security_Authorization",
  "Win32_Storage_FileSystem",
  "Win32_System_IO",
  "Win32_System_Pipes",
] }
